docs/v1.3.0/zh/api/campaign/FleetManagementModel.md
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `FleetManagementModel`
- [← 本领域 / 返回 campaign](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# FleetManagementModel

**Namespace:** TaleWorlds.CampaignSystem.ComponentInterfaces
**Module:** TaleWorlds.CampaignSystem
**Type:** `public abstract class FleetManagementModel : MBGameModel<FleetManagementModel>`
**Base:** `MBGameModel<FleetManagementModel>`
**File:** `TaleWorlds.CampaignSystem/ComponentInterfaces/FleetManagementModel.cs`

## 概述

`FleetManagementModel` 是一个规则模型，通常定义“系统该如何计算”。mod 开发者最常通过替换或继承它来改规则。

## 心智模型

把 `FleetManagementModel` 当作一个 Model 型扩展点来理解：先确认谁创建它、谁持有它、谁调用它，再决定是继承、组合还是只读使用。

## 主要属性

| Name | Signature |
|------|-----------|
| `MinimumTroopCountRequiredToSendShips` | `public abstract int MinimumTroopCountRequiredToSendShips { get; }` |

## 主要方法

### CanTroopsReturn
`public abstract bool CanTroopsReturn()`

**用途 / Purpose:** 判断当前对象是否可以执行 `troops return`。

### GetReturnTimeForTroops
`public abstract CampaignTime GetReturnTimeForTroops(Ship ship)`

**用途 / Purpose:** 获取 `return time for troops` 的当前值。

## 使用示例

```csharp
var implementation = new CustomFleetManagementModel();
```

## 参见

- [完整类目录](../catalog)